package com.example.noteapp.core.util

object TestTags {

    const val ORDER_SECTION = "ORDER_SECTION"

    const val ADD_BUTTON = "ADD_BUTTON"

    const val SAVE_BUTTON = "SAVE_BUTTON"

    const val DELETE_BUTTON = "DELETE_BUTTON"

    const val TITLE_TEXT_FIELD = "TITLE_TEXT_FIELD"

    const val CONTENT_TEXT_FIELD = "CONTENT_TEXT_FIELD"

    const val LIST_ITEM = "LIST_ITEM"

}