<resources>
    <string name="app_name">NoteApp</string>
    <string name="add_button_caption">Add</string>
    <string name="sort_button_caption">Sort</string>
    <string name="ascending">Ascending</string>
    <string name="descending">Descending</string>
    <string name="title">Title</string>
    <string name="date">Date</string>
    <string name="color">Color</string>
</resources>